syntax = "proto3";

option go_package = "pkg/api/auth_pb";

package api;

service AuthService {
  rpc Validate(Token) returns (ValidateResponse);
  rpc GetUser(Token) returns (GetUserResponse);
}

message Token {
  string token = 1;
}

message ValidateResponse {
  int32 user_id = 1;
}

message GetUserResponse {
  // int32 user_id = 1;
  string login = 1;
  string email = 2;
  string name = 3;
}